--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "3.0.7",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
@@ -19,7 +20,6 @@
     "mongoose": "^5.8.4",
     "nodemailer": "^6.4.2",
     "stripe": "^7.14.0",
-    "validator": "^12.1.0",
     "xoauth2": "^1.2.0"
   },
   "description": ""
