Fixing heroku deployment by adding Procfile and using heroku automatic PORT env

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-SERVER_PORT=3000
+# PORT is not needed to be injected in the environment of Heroku, as it is done automatically
+PORT=3000
 COOKIE_SECRET=xx
 STRIPE_PUBLISHABLE_KEY=xx
 STRIPE_SECRET_KEY=xx
