Fixed admin page issues, and released this commit as v2.0.0

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -4,6 +4,7 @@ COOKIE_SECRET=xx
 STRIPE_PUBLISHABLE_KEY=xx
 STRIPE_SECRET_KEY=xx
 MONGO_URL=xx
+SENDER_MAIL_ID=example@gmail.com
 MAIL_CLIENT_ID=xx
 MAIL_CLIENT_SECRET=xx
 MAIL_REFRESH_TOKEN=xx
