--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "dotenv": "^11.0.0",
     "nodemon": "^2.0.15"
   },
+  "engines": {
+    "node": "16.16.x"
+  },
   "author": {
     "name": "Gourav Khator"
   },
